// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config/env .getConfig(env) supports Azure DevOps 1`] = `
Object {
  "endpoint": "an Azure DevOps endpoint",
  "hostRules": Array [],
  "platform": "azure",
  "token": "an Azure DevOps token",
}
`;

exports[`config/env .getConfig(env) supports Bitbucket token 1`] = `
Object {
  "endpoint": "a bitbucket endpoint",
  "hostRules": Array [],
  "password": "app-password",
  "platform": "bitbucket",
  "username": "some-username",
}
`;

exports[`config/env .getConfig(env) supports Bitbucket username/password 1`] = `
Object {
  "endpoint": "a bitbucket endpoint",
  "hostRules": Array [],
  "password": "app-password",
  "platform": "bitbucket",
  "username": "some-username",
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [],
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint and github.com 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [
    Object {
      "domainName": "github.com",
      "hostType": "github",
      "token": "a github.com token",
    },
  ],
  "token": "a ghe token",
}
`;

exports[`config/env .getConfig(env) supports GitHub custom endpoint and gitlab.com 1`] = `
Object {
  "endpoint": "a ghe endpoint",
  "hostRules": Array [],
  "token": "a ghe token",
}
`;

exports[`config/env .getConfig(env) supports GitHub token 1`] = `
Object {
  "hostRules": Array [],
  "token": "github.com token",
}
`;

exports[`config/env .getConfig(env) supports GitLab custom endpoint 1`] = `
Object {
  "endpoint": "a gitlab endpoint",
  "hostRules": Array [],
  "platform": "gitlab",
  "token": "a gitlab token",
}
`;

exports[`config/env .getConfig(env) supports GitLab token 1`] = `
Object {
  "hostRules": Array [],
  "platform": "gitlab",
  "token": "a gitlab.com token",
}
`;

exports[`config/env .getConfig(env) supports datasource env token 1`] = `
Object {
  "hostRules": Array [
    Object {
      "hostType": "pypi",
      "token": "some-token",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports docker username/password 1`] = `
Object {
  "hostRules": Array [
    Object {
      "hostType": "docker",
      "password": "some-password",
      "username": "some-username",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports domain and host names with case insensitivity 1`] = `
Object {
  "hostRules": Array [
    Object {
      "domainName": "github.com",
      "hostType": "github-tags",
      "token": "some-token",
    },
    Object {
      "hostName": "my.custom.host",
      "hostType": "pypi",
      "password": "some-password",
    },
  ],
}
`;

exports[`config/env .getConfig(env) supports password-only 1`] = `
Object {
  "hostRules": Array [
    Object {
      "hostType": "npm",
      "password": "some-password",
    },
  ],
}
`;
